e2e/tests/all/snapshots/file_field_rest_mobile.snap
---
source: e2e/src/suite.rs
description: file_field at mobile (rest)
expression: tree
---
LabelText
  StaticText "Attachments"
button "Attachments"
  StaticText "Drop files here, or click to pick"
status [atomic] [live=polite]
