e2e/tests/all/snapshots/file_field_states_rest_desktop.snap
---
source: e2e/src/suite.rs
description: file_field_states at desktop (rest)
expression: tree
---
LabelText
  StaticText "Receipt"
generic
  group "Receipt"
    button "Receipt Browse files"
      StaticText "Browse files"
status [atomic] [live=polite]
LabelText
  StaticText "Contract"
generic
  group "Contract"
    button "Contract Pick a file Browse files" [invalid]
      StaticText "Pick a file"
      StaticText "Browse files"
status [atomic] [live=polite]
generic
  StaticText "We cannot read that file."
