e2e/tests/all/snapshots/file_field_states_rest_mobile.snap
---
source: e2e/src/suite.rs
description: file_field_states at mobile (rest)
expression: tree
---
LabelText
  StaticText "Receipt"
group "Receipt"
  button "Receipt Browse files"
    StaticText "Browse files"
status [atomic] [live=polite]
LabelText
  StaticText "Contract"
group "Contract"
  button "Contract Pick a file Browse files" [invalid]
    description "Required We cannot read that file."
    StaticText "Pick a file"
    StaticText "Browse files"
status [atomic] [live=polite]
StaticText "We cannot read that file."
