e2e/tests/all/snapshots/floating_window-steps_rest_desktop.snap
---
source: e2e/src/suite.rs
description: floating_window-steps at desktop (rest)
expression: tree
---
button "Inspector"
  StaticText "Inspector"
