e2e/tests/all/snapshots/floating_window-steps_rest_mobile.snap
---
source: e2e/src/suite.rs
description: floating_window-steps at mobile (rest)
expression: tree
---
button "Inspector"
  StaticText "Inspector"
