e2e/tests/all/snapshots/floating_window-steps_steps_desktop.snap
---
source: e2e/src/suite.rs
description: floating_window-steps at desktop (steps)
expression: tree
---
button "Inspector"
  StaticText "Inspector"
dialog "Inspector"
  group "Move window"
    heading "Inspector" [level=2]
      StaticText "Inspector"
  button "Window menu" [expanded=false] [haspopup=menu]
  button "Close"
  group "Move window"
    button "Move up"
    button "Move down"
    button "Move left"
    button "Move right"
    button "Done"
      StaticText "Done"
  paragraph
    StaticText "Drag the title bar, or focus it and use the arrow keys."
  button "Done"
    StaticText "Done"
  separator "Resize window" = 378 [valuemax=480] [valuemin=240]
